@@ -19,6 +19,8 @@ Qtilities v1.4 Changes
     ============================
     QtilitiesCore:
     ============================
+    [+] Added ITask::lastErrorMessages(), ITask::setLastErrorMessagesStackSize() and ITask::lastErrorMessagesStackSize().
+
     [#] FileUtils::comparePaths() and FileUtils::pathStartsWith() got new case sensitivity parameters which can be used on Windows.
     [#] QtilitiesProcess::logProgressOutput() and QtilitiesProcess::logProgressError() are now virtual.
 
@@ -29,6 +31,7 @@ Qtilities v1.4 Changes
     ============================
     [*] Fixed issue with TreeFileItem::setFilePath() where it did not allow the case of a file to be changed.
     [*] Fixed NamingPolicyFilter::ProhibitDuplicateNamesCaseSensitive not always handled correctly in NamingPolicyFilter::Evaluate.
+	[*] Improved and fixed issues in SingleTaskWidget.
 
     ============================
     QtilitiesExtensionSystem:
